--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
 
 .jumbotron {
     text-align: center;
-    background: white url("./nyt-react-search/client/public/images/nyt_logo.png") no-repeat left;
+    background: white url("./images/nyt_logo.png") no-repeat left;
     
 }
 
